--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,11 +4,11 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity">
+        tools:context=".main.MainActivity">
 
     <fragment
             android:id="@+id/fragment"
-            android:name="com.codylab.videocatalogue.CatalogueFragment"
+            android:name="com.codylab.videocatalogue.catalogue.CatalogueFragment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 </FrameLayout>
