--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -3,9 +3,11 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:context=".catalogue.CatalogueFragment">
-    <android.support.v7.widget.RecyclerView
-            android:id="@+id/catalogue"
+             tools:context=".detail.DetailFragment">
+
+    <TextView
+            android:id="@+id/name"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="match_parent"/>
+
 </FrameLayout>
