--- a/app/src/main/res/layout/fragment_catalogue.xml
+++ b/app/src/main/res/layout/fragment_catalogue.xml
@@ -5,7 +5,7 @@
              android:layout_height="match_parent"
              tools:context=".catalogue.CatalogueFragment">
     <android.support.v7.widget.RecyclerView
-            android:id="@+id/catalogue"
+            android:id="@+id/catalogueRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 </FrameLayout>
