--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,14 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="TextHeader1">
+        <item name="android:textSize">24sp</item>
+        <item name="android:lineSpacingExtra">4.8sp</item>
+    </style>
+
+    <style name="TextBodyPrimary">
+        <item name="android:textSize">16sp</item>
+        <item name="android:lineSpacingExtra">8sp</item>
+    </style>
+
 </resources>
