--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,6 @@
     <fragment
             android:id="@+id/fragment"
             android:name="com.codylab.videocatalogue.catalogue.CatalogueFragment"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
 </FrameLayout>
