--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -8,7 +8,8 @@
             android:id="@+id/categoryName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/TextHeader1"
+            style="@style/Text.Header"
+            android:layout_margin="@dimen/default_margin"
             tools:text="TV Shows"/>
 
     <android.support.v7.widget.RecyclerView
