--- a/app/src/main/res/layout/item_video.xml
+++ b/app/src/main/res/layout/item_video.xml
@@ -10,16 +10,16 @@
 
     <ImageView
             android:id="@+id/image"
-            android:layout_width="110dp"
-            android:layout_height="200dp"
-            android:layout_margin="16dp"
+            android:layout_width="@dimen/cover_image_portrait_width"
+            android:layout_height="@dimen/cover_image_portrait_height"
+            android:layout_margin="@dimen/default_margin"
             tools:ignore="ContentDescription"/>
 
     <TextView
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/TextBodyPrimary"
+            android:layout_margin="@dimen/default_margin"
+            style="@style/Text.BodyPrimary"
             tools:text="Toy Story"/>
-
 </LinearLayout>
