--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,9 +6,9 @@
         android:layout_height="match_parent"
         tools:context=".main.MainActivity">
 
-    <fragment
+    <FrameLayout
             android:id="@+id/fragment"
-            android:name="com.codylab.videocatalogue.catalogue.CatalogueFragment"
+            android:tag="fragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 </FrameLayout>
